# zachary-android-assignments

./: assignment2.docx
.github/site/: index.html
.github/workflows/: android.yml  desktop.yml  pages.yml
Assignment-1/: CMakeLists.txt
Assignment-1/AndroidProgrammingQuiz-CrossPlatformCI/Scene/: Model.h  Renderer.cpp  Triangle.h
Assignment-1/AndroidProgrammingQuiz-CrossPlatformCI/android/: settings.gradle
Assignment-1/AndroidProgrammingQuiz-CrossPlatformCI/android/app/src/main/assets/shader/: BlueTriangleVertex.glsl
Assignment-1/AndroidProgrammingQuiz-CrossPlatformCI/android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp
Assignment-1/AndroidProgrammingQuiz-CrossPlatformCI/cmake/: ImportDependencies.cmake
Assignment-1/Scene/: Platform.h  Renderer.h  ShaderHelper.h  Square.cpp  Square.h  Triangle.cpp  main.cpp
Assignment-1/android/: local.properties
Assignment-1/android/app/: build.gradle
Assignment-1/android/app/src/main/: AndroidManifest.xml
Assignment-1/android/app/src/main/assets/shader/: BlueTriangleFragment.glsl
Assignment-1/android/app/src/main/res/values/: strings.xml
Assignment-2/: .gitignore  README.md  build_web.sh  script_build_and_run.bat
Assignment-2-3DFan/: CMakeLists.txt  build_web.bat
Assignment-2-3DFan/.github/workflows/: build-and-deploy.yml
Assignment-2-3DFan/Scene/: Fan.h  Platform.h  Transform.cpp  main.cpp
Assignment-2-3DFan/android/app/: build.gradle
Assignment-2-3DFan/android/app/src/main/assets/shader/: FanFragment.glsl
Assignment-2-3DFan/android/app/src/main/cpp/: CMakeLists.txt  NativeTemplate.cpp
Assignment-2-3DFan/android/app/src/main/java/com/example/fan3d/: MainActivity.java
Assignment-2-3DFan/android/gradle/: libs.versions.toml
Assignment-2/Scene/: Fan.cpp  Model.h  Renderer.cpp  Renderer.h  ShaderHelper.h  Transform.h
Assignment-2/android/: settings.gradle
Assignment-2/android/app/src/main/: AndroidManifest.xml
Assignment-2/android/app/src/main/assets/shader/: FanVertex.glsl
Assignment-2/android/app/src/main/res/values/: strings.xml  themes.xml
Assignment-2/cmake/: ImportDependencies.cmake
Chapter2/2-OpenGLES3_Primitives-Modern/: CMakeLists.txt
Chapter2/2-OpenGLES3_Primitives-Modern/Scene/: Model.h  Platform.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  main.cpp
Chapter2/2-OpenGLES3_Primitives-Modern/android/app/src/main/java/com/example/opengles3primitives/: MainActivity.java
Chapter2/2-OpenGLES3_Primitives-Modern/android/app/src/main/res/layout/: activity_main.xml
Chapter2/2-OpenGLES3_Primitives-Modern/android/app/src/main/res/values/: strings.xml  themes.xml
Chapter2/2-OpenGLES3_Primitives-Modern/cmake/: ImportDependencies.cmake
WK9/AndroidProgrammingQuiz-CrossPlatformCI/: build_web.bat  build_web.sh  script_build_and_run.bat
WK9/AndroidProgrammingQuiz-CrossPlatformCI/android/app/src/main/java/com/example/helloworldandroid/: MainActivity.java
WK9/AndroidProgrammingQuiz-CrossPlatformCI/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
WK9/AndroidProgrammingQuiz-CrossPlatformCI/android/app/src/main/res/values/: themes.xml
